--- a/client/layout.html
+++ b/client/layout.html
@@ -1,6 +1,5 @@
 <head>
-    <title>Simple Meteor CMS</title>
-    <!-- Set viewport for Bootstrap to work on mobile -->
+    <title>Matt Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
